<resources>
    <string name="app_name">Swrl List</string>
    <string name="ok">OK</string>
    <string name="whatsNewTitle">What\'s new?</string>
    <string name="pkey_version_number">version_number</string>
    <string name="whatsNewLatest">
        <![CDATA[
        <h4>Version 23 (28 January 2018)</h4>
        \u2022 Improve image loading and remove the annoying spinners
        <h4>Version 22 (27 January 2018)</h4>
        \u2022 Add ability to respond to Swrls!
        <h4>Version 21 (24 January 2018)</h4>
        \u2022 Syncing all swrls now restores Swrls backed up to swrl.co
        <h4>Version 20 (13 January 2018)</h4>
        \u2022 Undo snackbar no longer hides the navigation bar
        <h4>Version 19 (12 January 2018)</h4>
        \u2022 Loading the active list is more responsive
        <h4>Version 18.4 (08 January 2018)</h4>
        \u2022 List can handle opening view when 200+ swrls
        <h4>Version 18.3 (08 January 2018)</h4>
        \u2022 Fix issue on view where removing items displayed the wrong title
        <h4>Version 18.2 (07 January 2018)</h4>
        \u2022 Fix to swrls being duplicated when searching for details
        <h4>Version 18.1 (07 January 2018)</h4>
        \u2022 Fix to search filter being hidden when pressing back
        <h4>Version 18 (01 January 2018)</h4>
        \u2022 Search filters now available on the lists!
        <h4>Version 17 (01 January 2018)</h4>
        \u2022 Swipe right from your list to recommend Swrls
        <h4>Version 16 (27 December 2017)</h4>
        \u2022 List remembers last scroll position when pressing back
        <h4>Version 15 (24 December 2017)</h4>
        \u2022 Christmas update!<br/>
        \u2022 Swipe left to dismiss discovered Swrls<br/>
        \u2022 Re-add Swrls you previously marked as Done
        <h4>Version 14 (17 December 2017)</h4>
        \u2022 Register and forgotten password links on the login page
        <h4>Version 13.1 (11 December 2017)</h4>
        \u2022 Keep up to date with swrl.co with all your actions!
        <h4>Version 13 (03 December 2017)</h4>
        \u2022 Added IMDB URL to details for films
        <h4>Version 12 (02 December 2017)</h4>
        \u2022 Syncing all swrls with swrl.co backs up active and done swrls
        <h4>Version 11.1.1 (29 November 2017)</h4>
        \u2022 See progress of refresh all details
        <h4>Version 11 (28 November 2017)</h4>
        \u2022 Added User Profile image of the author of the Swrl<br/>
        \u2022 Avoid refreshing the lists all the time with caching improvements
        <h4>Version 10.3 (20 November 2017)</h4>
        \u2022 UI improvements and fixes
        <h4>Version 10.2 (12 November 2017)</h4>
        \u2022 UI improvements including swipe to refresh, more color and better subtitles!
        <h4>Version 10.1 (06 November 2017)</h4>
        \u2022 Can now identify and filter websites and videos
        <h4>Version 10.0 (06 November 2017)</h4>
        \u2022 You can now login to Swrl.co and see recommendations from users!<br/>
        \u2022 When logged in, the discover feed will be weighted to you
        <h4>Version 9.4 (05 November 2017)</h4>
        \u2022 Filter discover results if already saved in your list
        <h4>Version 9.3.1 (29 October 2017)</h4>
        \u2022 Ui improvements and a link to this dialog from the menu
        <h4>Version 9.3 (28 October 2017)</h4>
        \u2022 Added clickable URls to details
        <h4>Version 9.2 (28 October 2017)</h4>
        \u2022 Images for albums and websites
        <h4>Version 9.1.1 (28 October 2017)</h4>
        \u2022 UI improvements
        <h4>Version 9.1 (27 October 2017)</h4>
        \u2022 Bug fix when opening swrl on discover feed
        <h4>Version 9.0 (25 October 2017)</h4>
        \u2022 Discover Swrls from swrl.co to add to your list!<br/>
        \u2022 New Icon!<br/>
        \u2022 Loads of UI fixes
        <h4>Version 8.4 (20 September 2017)</h4>
        \u2022 Bug Fix for Refresh All Details option
        <h4>Version 8.3 (20 September 2017)</h4>
        \u2022 Add Refresh All Details option
        <h4>Version 8.2 (20 September 2017)</h4>
        \u2022 Highlight selected filter
        <h4>Version 8.1 (19 September 2017)</h4>
        \u2022 UI improvements to view screen
        <h4>Version 8.0 (18 September 2017)</h4>
        \u2022 Improve view screen details
        <h4>Version 7.23 (17 September 2017)</h4>
        \u2022 Fixes to number totals of list filters
        <h4>Version 7.22 (17 September 2017)</h4>
        \u2022 Add number totals to filters
        <h4>Version 7.21 (17 September 2017)</h4>
        \u2022 Add filters to the Main List View
        <h4>Version 7.20 (03 September 2017)</h4>
        \u2022 Bug Fixes
        <h4>Version 7.19 (02 September 2017)</h4>
        \u2022 Tweaking the images in the list view to render faster
        <h4>Version 7.18 (30 August 2017)</h4>
        \u2022 Various UI improvements
        <h4>Version 7.17 (28 August 2017)</h4>
        \u2022 Show searching spinner on view page when open
        <h4>Version 7.16 (20 August 2017)</h4>
        \u2022 Various fixes on View screen
        <h4>Version 7.15 (19 August 2017)</h4>
        \u2022 Remove Done button from View Screen
        \u2022 Bug Fixes
        <h4>Version 7.14 (19 August 2017)</h4>
        \u2022 Swipe to mark Swrls as Done
        <h4>Version 7.13 (30 July 2017)</h4>
        \u2022 Visual updates
        <h4>Version 7.12 (29 May 2017)</h4>
        \u2022 Improved View Screen for details
        <h4>Version 7.11 (29 May 2017)</h4>
        \u2022 Get full details of the Swrls
        <h4>Version 7.10 (21 May 2017)</h4>
        \u2022 Cosmetic changes
        <h4>Version 7.9 (21 May 2017)</h4>
        \u2022 View screen shows search results if your Swrl has no details
        <h4>Version 7.8 (21 May 2017)</h4>
        \u2022 Can click on a search result to see more details before adding it.
        <h4>Version 7.7 (14 May 2017)</h4>
        \u2022 First attempt at the View Screen. Click on a Row to see it.
        <h4>Version 7.6 (14 May 2017)</h4>
        \u2022 Fix for image resizing
        <h4>Version 7.5 (14 May 2017)</h4>
        \u2022 Images are cached for faster processing
        <h4>Version 7.4 (14 May 2017)</h4>
        \u2022 Can now search for board games
        <h4>Version 7.3 (14 May 2017)</h4>
        \u2022 Added ellipses on title and added missing icons
        <h4>Version 7.2 (14 May 2017)</h4>
        \u2022 Cleaned up the images on the rows
        <h4>Version 7.1 (13 May 2017)</h4>
        \u2022 Search works and now it has images!
        <h4>Version 7.0 (12 May 2017)</h4>
        \u2022 Changed the way you add Swrls to a new screen
        <h4>Version 6.3 (19 February 2017)</h4>
        \u2022 Can choose a type when pressing enter
        <h4>Version 6.2 (31 December 2016)</h4>
        \u2022 Fix Bug when undoing Swrls marked as Done
        <h4>Version 6.1 (29 December 2016)</h4>
        \u2022 Swrls can now be added as a Type<br/>
        \u2022 Can undo marking swrls as done
        <h4>Version 6 (27 December 2016)</h4>
        \u2022 First iteration of the Full Screen view of a Swrl listing
        ]]>
    </string>
    <string name="whatsNewMoreButtonText">Show full history</string>
    <string name="quick_add_swrl">Quick add Swrl</string>
    <string name="cancel">Cancel</string>
    <string name="addSwrlText">Search by title</string>
    <string name="item_done">Mark item as done</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="app_title">Swrl List</string>
    <string name="refresh_details">Refresh Details</string>
    <string name="mark_as_done">Mark As Done</string>
    <string name="searching">Searching…</string>
    <string name="no_search_results">No Search Results.</string>
    <string name="drawer_open">Menu Open</string>
    <string name="drawer_closed">Menu Closed</string>
    <string name="refresh">Refresh</string>
    <string name="Swrl_List">Swrl List</string>
    <string name="Done">Done</string>
    <string name="discover">Discover</string>
    <string name="done_title">Done</string>
    <string name="delete">Delete Swrl</string>
    <string name="discover_title">Discover Swrls</string>
    <string name="listNoSwrlsText">No Swrls Yet!\n\nAdd some by clicking the button below.</string>
    <string name="doneNoSwrlsText">Nothing here yet!</string>
    <string name="discoverNoSwrlsText">Nothing to Discover yet!</string>
    <string name="show_whats_new">What\'s new?</string>
    <string name="login_user">Username or Email</string>
    <string name="login">Login</string>
    <string name="login_menu_link">Login to swrl.co</string>
    <string name="password">Password</string>
    <string name="pkey_auth_token">pkey_auth_token</string>
    <string name="pkey_user_id">pkey_user_id</string>
    <string name="logout">Logout</string>
    <string name="inbox">Inbox</string>
    <string name="inbox_title">Recommended to you</string>
    <string name="inboxNoSwrlsText">Nothing recommended to you at the moment!</string>
    <string name="colorbar">ColorBar</string>
    <string name="iconImage">icon</string>
    <string name="backgroundFade">backgroundFade</string>
    <string name="itemImage">Item Image</string>
    <string name="exampleNoSwrlsText">No Swrls yet!  Add some by clicking the button below.</string>
    <string name="signUpText">No account yet? Create one</string>
    <string name="exampleTitle">Title</string>
    <string name="exampleText">text</string>
    <string name="profile_image">profile image</string>
    <string name="refresh_all_details">Refresh Details</string>
    <string name="sync_swrls_with_swrl_co">Sync Swrls with swrl.co</string>
    <string name="login_forgot_password">Forgot your password? Click here</string>
    <string name="reAdd">Mark As Later</string>
    <string name="add_swrl_users_or_email_addresses">Add Swrl Users or email addresses</string>
    <string name="why_would_your_friends_like_this_swrl">Why would your friends like this Swrl?</string>
    <string name="send_recommendation">Send Recommendation</string>
    <string name="action_search">Search</string>
    <string name="comment">Comment</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="not_for_me">Not for me</string>
    <string name="loved_it">Loved It!</string>
    <string name="not_bad">Not bad</string>
    <string name="sending_to">Sending to:</string>
    <string name="recommend">Recommend</string>
    <string name="respond">Respond</string>
</resources>
