<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.swrl.list.ui.activity.ViewActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_recommend"
        android:orderInCategory="100"
        android:title="@string/recommend"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_respond"
        android:orderInCategory="100"
        android:title="@string/respond"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_markAsDone"
        android:orderInCategory="100"
        android:title="@string/mark_as_done"
        app:showAsAction="never" />
</menu>
