<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.swrl.list.ui.activity.ListActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh_all_details"
        android:orderInCategory="100"
        android:title="@string/refresh_all_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/actions_show_whats_new"
        android:orderInCategory="100"
        android:title="@string/show_whats_new"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
