<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/response_radio"
        android:layout_marginTop="8dp">
        <RadioButton android:id="@+id/radio_not_for_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_for_me"/>
        <RadioButton android:id="@+id/radio_not_bad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_bad"/>
        <RadioButton android:id="@+id/radio_loved_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loved_it"/>
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/comment_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/leave_a_comment"
            android:inputType="textMultiLine"
            android:minLines="2" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>