<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context="co.swrl.list.ui.activity.RecommendationCreationActivity">

    <AutoCompleteTextView
        android:id="@+id/recipient_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_swrl_users_or_email_addresses"
        android:imeOptions="actionDone"
        android:maxLines="1" />

    <ListView
        android:id="@+id/selected_users"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:isScrollContainer="false"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/review_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/why_would_your_friends_like_this_swrl"
            android:inputType="textMultiLine"
            android:minLines="5" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/footer"
        style="?attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_recommend"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/recommend_action"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_recommendation" />

    </LinearLayout>

</LinearLayout>
