<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp"
    android:paddingBottom="0dp">

    <ImageView
        android:contentDescription="@string/colorbar"
        android:id="@+id/nav_left_border"
        android:layout_width="5dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/image_block_color"
        android:color="@color/album"/>

    <ImageView
        android:contentDescription="@string/iconImage"
        android:id="@+id/icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_film"
        android:layout_toEndOf="@id/nav_left_border"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:textColor="#000"
        android:text="@string/exampleTitle"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/icon"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_gravity="bottom"
        />
</RelativeLayout>