<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_swrl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.swrl.list.ui.AddSwrlActivity">
    <RelativeLayout
        android:id="@+id/input_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/addSwrlText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/addSwrlText"
            android:imeOptions="actionSearch"
            android:inputType="textPersonName"
            android:nextFocusDown="@id/addItemEditText"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/searchResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_header"
        android:layout_above="@+id/footer"/>

    <TextView
        android:id="@+id/noSearchResults"
        android:text="No Search Results."
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/input_header"
        android:layout_above="@+id/footer"
        android:gravity="center" />

    <LinearLayout android:id="@+id/footer" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_alignParentBottom="true" style="@android:style/ButtonBar"
        android:background="@null" >

        <Button android:id="@+id/cancel_add" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:text="@string/cancel" />

        <Button android:id="@+id/add_swrl_button" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:text="@string/quick_add_swrl" />

    </LinearLayout>

</RelativeLayout>
